<resources>
    <string name="user_gen_title">My User Collection</string>

    <string name="request_form_title">Generate Users</string>

    <string name="collection_name">Collection Name</string>
    <string name="user_count">How many?</string>
    <string name="users">users</string>

    <string name="select_gender">Gender?</string>
    <string name="gender_any">Any</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="select_nationality">Nationality?</string>
    <string name="nationality_any">Any</string>

    <string name="add_generated_user">Generate Users</string>
    <string name="generate">Generate</string>

    <string name="invalid_count">Hmm.. that's not a valid count</string>
    <string name="zero_count">Ops! Zero isn't a valid count</string>

    <string name="empty_user_collection">Looks like you don't have any users yet</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="uuid">Uuid</string>
    <string name="md5">md5</string>
    <string name="sha1">sha1</string>
    <string name="sha256">sha256</string>
    <string name="salt">salt</string>

    <string name="user_list_error">Looks like we have some issue..</string>
    <string name="select_user">Select a User to View Details</string>

    <string name="back">Back</string>
    <string name="retry">Retry</string>
</resources>